# AI-HUMAN-INTERVIEW

./: .gitignore  APPLY_BUTTON_UPDATE.md  CHECK_FRONTEND.md  DATABASE_RESET_SUMMARY.md  DEMO_SCRIPT.md  INTERVIEW_FEATURE.md  JOB_MATCHING_FEATURE.md  MATCH_PERSISTENCE_FEATURE.md  MVP_SETUP.md  OPTIMIZATION_SUMMARY.md  PERSISTENT_ANALYSIS_FIX.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_TEST_STEPS.md  README.md  RESUME_FEATURE.md  SIMPLE_VERSION_TEST.md  SUBMISSION_CHECKLIST.md  TAB_FILTER_FEATURE.md  TAVUS_GUIDE.md  TEST_TAB_FEATURE.md  TMOBILE_ICON_UPDATE.md  WHERE_IS_INPUT.md  docker-compose.yml  livekit-config.yaml
backend/: Dockerfile  env.example  pyproject.toml  reparse_resumes.py  resumes.db  seed_jobs.py  test_resume_api.py
backend/scripts/: livekit_connect.py
backend/skills/ai-infra/: SKILL.md
backend/skills/backend/: SKILL.md
backend/skills/devops/: SKILL.md
backend/skills/frontend/: SKILL.md
backend/skills/fullstack/: SKILL.md
backend/skills/ml-ai/: SKILL.md
backend/skills/product/: SKILL.md
backend/src/: __init__.py  database.py  main.py
backend/src/api/: interview_routes.py  job_routes.py  resume_routes.py  routes.py
backend/src/config/: settings.py
backend/src/models/: interview_session.py  job.py  resume.py  schemas.py
backend/src/services/: agent.py  anthropic_skills_service.py  avatar.py  digital_human_service.py  interview_evaluator.py  interview_question_generator.py  livekit_service.py  local_skills_registry.py  openai_tts_service.py  openrouter_llm_service.py  resume_matcher.py  tavus_agent_service.py
(+24 files in other folders)
