[project]
name = "liba-ai-backend"
version = "0.1.0"
description = "Real-time digital human with LiveKit and OpenAI TTS"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "edge-tts>=7.2.7",
    "imageio-ffmpeg>=0.5.1",
    "openai>=1.0.0",
    "livekit>=0.17.0",
    "livekit-api>=0.6.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "livekit-agents[tavus]~=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
